# vnav-slam-jcbb

./: .gitignore  CMakeLists.txt  README.md  package.xml
data/g2o/2d/: graph_type1.g2o  graph_type2_1ldmkPerMeasurement.g2o
data/g2o/2d_smallscale/: graph_type1.g2o  graph_type2.g2o
data/g2o/3d/: black=gauss-newtonResultsGivenDataAssociations=theBestWeCanDo.fig  graph_type1.g2o  graph_type2_1ldmkPerMeasurement.g2o  type1graph_blue=gt_black=initialGuess.fig  type2graph_blue=gt_black=initialGuess.fig
data/g2o/3d_smallscale/: black=gaussNewtonResultsGivenDataAssociations=theBestWeCanDo.fig  graph_type1.g2o  graph_type2.g2o  type1graph_blue=gt_black=initialGuess.fig  type2graph_blue=gt_black=initialGuess.fig
include/: MarginalMocks.h  visualization_tools.h  visualizer.h
include/gt/: KnownDataAssociation.h
include/jcbb/: Hypothesis.h  bearing_range_factor.h  jcbb.h  utils.h
include/ml/: MaximumLikelihood copy.h  MaximumLikelihood.h  MaximumLikelihood.hxx
include/slam/: slam.h  slam.hxx  slam_g2o_file.h  slam_node.h  types.h  utils.h  utils_g2o.h
launch/: lab_lounge_loops_apriltags.launch
logs/: april_lmk_assos.txt  april_lmk_assos_known_da.txt  april_lmk_assos_ml.txt  landmarks.txt  landmarks_good.txt  landmarks_good3.txt  landmarks_known_da.txt  landmarks_ml.txt  nis_consistency.txt  odom.txt  odom_good.txt  path.txt  path_good.txt  path_good2.txt  path_known_da.txt  path_ml.txt
logs copy 2/gt/: april_lmk_assos.txt  landmarks.txt  nis_consistency.txt  odom.txt  path.txt
logs copy 2/jcbb/: JCBB.txt  april_lmk_assos.txt  landmarks.txt  nis_consistency.txt  odom.txt  path.txt
logs copy 2/ml/: april_lmk_assos.txt  landmarks.txt  nis_consistency.txt
logs/gt/: Known data association.txt  april_lmk_assos.txt  landmarks.txt  nis_consistency.txt
logs/jcbb/: april_lmk_assos.txt  landmarks.txt  landmarks_good.txt  nis_consistency.txt  odom.txt  odom_good.txt  path.txt
logs/ml/: path.txt
params/: params.yaml
rviz/: rviz.rviz
scripts/: association_efficiency.py  clean_off_whitespace.py  plot_data.py  plot_data_all.py  read_odom.py
src/gt/: KnownDataAssociation.cpp
src/jcbb/: Hypothesis.cpp  MarginalMocks.cpp  jcbb.cpp  utils.cpp
src/ml/: MaximumLikelihood.cpp
src/slam/: slam.cpp  slam_g2o_file.cpp  slam_node.cpp
